# BIP39-Mnemonic

./: CMakeLists.txt  build.sh
include/bip39/: entropy.h  mnemonic.h
src/: bip39.cpp  bip39.h  database.cpp  main.cpp  util.cpp  util.h
src/bip39/: checksum.cpp  checksum.h  entropy.cpp  entropy.h  mnemonic.cpp  mnemonic.h  seed.cpp
